<resources>
    <string name="app_name">furnkart_frontend</string>
    <string name="et_email_login">Email</string>
    <string name="et_password_login">Password</string>
    <string name="forgot_password_login">Forgot your password?</string>
    <string name="tv_login">Login</string>
    <string name="social">social</string>
    <string name="with"><b>with</b></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_string">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="signup">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of birth</string>
    <string name="already">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="categories">Categories</string>
    <string name="accent">Accent Chairs</string>
    <string name="living">Living Room Furniture</string>
    <string name="unfinished">Unfinished Furniture</string>
    <string name="office">Office Furniture</string>
    <string name="kitchen">Kitchen &amp; dining di...</string>
    <string name="filters">Filters</string>
    <string name="table">TABLE</string>
    <string name="benches">BENCHES</string>
    <string name="slipcovers">SLIPCOVERS</string>
    <string name="leather_furniture">LEATHER FURNITURE</string>
    <string name="email_signup">email123@gmail.com</string>
    <string name="password_signup"></string>
    <string name="phone_signup">9899989099</string>
    <string name="dob_signup">20-11-2022</string>
    <string name="corner">Corner sofa, 2-seat</string>
    <string name="cobb">Cobbs convertible</string>
    <string name="dollar">$1,650</string>
    <string name="with_open">With open end, Farsta dark brown</string>
    <string name="perfect">Perfect for unexpected overnight guests, or just a handy spot for a nap, futons are a great option for adding a touch of seating that can easily be transformed into sleeping space whenever needed. This futon is a great option for creating a spot to snooze in mid-century-inspired style.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="no._of_items">1500 items</string>
    <string name="select_upho">Select Upholstery Color:</string>
    <string name="select_quan">Select Quantity</string>
    <string name="about_this_product">About this product</string>
    <string name="key_features">Key features</string>
    <string name="environment">Environment &amp; materials</string>
    <string name="good_to_know">Good to know</string>
    <string name="assembly">Assembly instructions/documents</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>