<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword.ForgotPasswordActivity"
    android:background="#f2f2f2">


    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />


    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146">

    </TextView>


    <TextView
        android:id="@+id/tv2_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_std"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="1dp"
        android:text="@string/forgot_password_string"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="65dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="0dp">

    </TextView>

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@id/rl_send"
        app:layout_constraintTop_toBottomOf="@id/tv2_signup"

          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:includeFontPadding="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_email_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email_signup"
                    android:textColorHint="@color/black"
                    android:fontFamily="@font/avenir_roman"
                    android:background="#f2f2f2"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:maxLines="1" />

            </LinearLayout>

            <View
                android:id="@+id/view_email"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_email"
                android:layout_marginLeft="70dp"
                android:background="@color/white"
                android:fontFamily="@font/avenir_std"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:backgroundTint="#f2f2f2"
                android:text="@string/et_email_login"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#8c8c8c" />


        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent" />


    <RelativeLayout

        android:id="@+id/rl_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/relativeLayout"
        android:layout_marginBottom="50dp"
        >

        <ImageView
            android:id="@+id/btn_send"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:src="@drawable/circle_login">


        </ImageView>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/circle_login"
            android:src="@drawable/ic_baseline_send_24">

        </ImageView>


    </RelativeLayout>

    <View
        android:layout_width="135dp"
        android:layout_height="5dp"
        android:background="@drawable/line"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

    </View>


</androidx.constraintlayout.widget.ConstraintLayout>